<resources>
    <string name="app_name">Yaku Lap</string>
    <string name="app_powered_by">Powered by Yaku lab</string>
    <string name="app_version_code">Versión </string>
    <string name="app_welcome_message">Bienvenido a YAKU LAB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_begining">Empecemos</string>
    <string name="intro_primera">Elige un reto</string>
    <string name="intro_segunda">Completa el reto</string>
    <string name="intro_tercera">Gana trofeos y puntos</string>
    <string name="intro_desc_primera">Tendras una infinidad de retos propuestos por nosotros en donde podras elegir el que mas te guste y divertirte</string>
    <string name="intro_desc_segunda">Al ingresar a un reto podras conocer los detalles para poder completar el reto</string>
    <string name="intro_desc_tercera">Ganaras puntos, por cada reto completado y además recibirás una información importante acerca del reto inmediatamente al completar un reto</string>
    <string name="forget_pass">¿Has olvidado como ingresar?</string>
    <string name="otra_conexion">O</string>
    <string name="doesnt_have_account">¿No tienes una cuenta?</string>
    <string name="create_account">Registrate aquí</string>

    <!--App Settings-->
    <string name="terms_conditions_app_login">Al hacer click en el botón "Ingresar", Aceptas nuestras <b>políticas de privacidad</b> y <b>términos de condición</b> de %1$s.</string>
    <string name="terms_conditions_app_register">Haciendo click en "registrarse", estoy de acuerdo con los Términos y condiciones de <b>%1$s</b>, y su <b>Política de privacidad</b></string>


    <string name="loading">Cargando...</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="subtitle_experiencias">Explora nuevos retos</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_resources">Recursos de ayuda</string>
    <string name="menu_sign_out">Cerrar sessión</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="resources_help">Recursos de ayuda</string>
    <string name="resources_contact_whatsapp">Contacte por whatsapp</string>
    <string name="resources_new_funtionality">Solicite una funcionalidad</string>
    <string name="codigo_pais">+51</string>
    <string name="telefono_empresa">930292619</string>
    <string name="mensaje_default_soporte">Hola! 👋 Soy YakuBot el bot residente en YakuLab \n¿En que puedo ayudarte?</string>
    <string name="text_share">Compartir</string>
    <string name="text_comment">Comentar</string>
    <string name="descargar_en_el_telefono">Descargar en el teléfono</string>
    <string name="compatir_foto">Compatir foto</string>
    <string name="error">Error</string>
    <string name="error_new">Error</string>
    <string name="registrarChallengeText">Guardar Imagen</string>
    <string name="congratulations">Felicidades!</string>
    <string name="descripcion_result"><b>Las alas de las mariposas son transparentes pero percibimos sus llamativos y distintos colores gracias a que su estructura está protegida con escamas</b> muy finas que reflejan continuamente la luz.</string>
    <string name="textChallengeCompleted">Reto Completado</string>
    <string name="report_post">Denunciar publicación</string>
    <string name="report_comment">Denunciar comentario</string>
    <string name="concerned_post">Estoy preocupado por esta publicación</string>
    <string name="concerned_comment">Estoy preocupado por este comentario</string>
    <string name="hide_post">Ocultar publicación</string>
    <string name="hide_fewer_post">Ver menos publicaciónes como este</string>
    <string name="block_user">Bloquear usuario</string>
    <string name="title_reportar">Porfavor seleccione un problema</string>
    <string name="subtitle_report">Si alguien está en peligro inmediato, obtenga ayuda antes de informar a YAKU LAB. No esperes.</string>
    <string name="report_post_naked">Desnudez</string>
    <string name="report_post_violence">Violencia</string>
    <string name="report_post_terrorism">Terrorismo</string>
    <string name="report_post_harassment">Acoso</string>
    <string name="report_post_suicide">Suicidio o Autolesión</string>
    <string name="dont_see_post">No ver publicaciones de este usuario</string>
    <string name="report_user">Reportar usuario</string>
    <string name="concerned_about_user">Estoy preocupado por este usuario</string>
    <string name="content_will_be_removed">Solo eliminamos contenido que va en contra de nuestras Normas comunitarias. No permitimos cosas como:</string>

    <!-- Html sources-->
    <string name="htmlComunityRulesToDelete"><![CDATA[<li style="padding-top: 24px;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Amenazas de cometer violencia <br>Por ejemplo, apuntar a una persona y mencionar un arma específica</li>

    <li style="padding-top: 24px;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Personas u organizaciones peligrosas<br>Por ejemplo, el terrorismo o una organización criminal.</li>

    <li style="padding-top: 24px;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Violencia gráfica extrema<br>Por ejemplo, glorificar la violencia o celebrar el sufrimiento.</li>

    <li style="padding-top: 24px;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Otro tipo de violencia<br>Por ejemplo, imágenes perturbadoras u otra cosa.</li>]]></string>
    <string name="sendReport">Enviar reporte</string>
    <string name="close">Cerrar</string>
    <string name="inform_received">Gracias, hemos recibido tu informe.</string>
    <string name="inform_received_title">Informe recibido</string>
    <string name="step1_comunity_description">Tu informe nos ayuda a mejorar nuestros procesos y mantiene YAKU LAB seguro para todos.</string>
    <string name="inform_in_progress_title">En espera de revisión</string>
    <string name="step2_comunity_description">Usamos tecnología y equipos de revisión para eliminar cualquier cosa que no cumpla con nuestros estándares lo más rápido posible.</string>
    <string name="inform_solved_title">Decisión tomada</string>
    <string name="step3_comunity_description">Le enviaremos una notificación para ver el resultado en su bandeja de entrada de soporte lo antes posible.</string>
    <string name="title_nearby_species">Especies cercanas</string>
    <string name="sciurus_xyridis">Sciurus xyridis</string>
    <string name="title_nearby_species_empty">No hay\nespecies\ncercanas</string>
    <string name="fragment_home_tittle_animals">Animales</string>
    <string name="Fruits">Frutas</string>
    <string name="title_plants">Plantas</string>
    <string name="menu_challenge">Retos</string>
    <string name="menu_result_image_capture">Resultado</string>
    <string name="fragment_title_camera_options">Elige una opción</string>
    <string name="camera">Cámara</string>
    <string name="fragment_title_options_gallery">Galería</string>
    <string name="menu_challenge_list">Retos\n</string>
    <string name="fragment_comment_error_block">Error al bloquear usuario.</string>
    <string name="imagen_no_subida">Imagen no subida</string>
    <string name="menu_rank">Ranking</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_aula">Ranking</string>
    <string name="fragment_home_message_share">"\n        ¡Hey! Quiero compartir contigo YAKU LAB, una increíble plataforma educativa de ciencia y tecnología. 🚀🔬\n\n        📱 Descarga la app y únete a la aventura del aprendizaje gamificado:\n        👉 https://play.google.com/store/apps/details?id=%1$s\n\n        ¡Juntos, podemos hacer que el aprendizaje sea divertido e interactivo! 💡🎮\n        "</string>
    <string name="title_nearby_species_with_ar">Realidad aumentada</string>
    <string name="take_an_image_with_your_camera">Captura la imagen utilizando la función de realidad aumentada en tu cámara</string>
    <string name="data_collection_disclosure_message"><![CDATA[<p><html> <body> <p>Yaku Lab recopila ciertos tipos de datos para mejorar tu experiencia en la aplicaci&oacute;n. Aqu&iacute; est&aacute; lo que recopilamos:</p> <ul> <li><b>Informaci&oacute;n Personal:</b><br />  - Nombre: Se recopila para la funcionalidad de la aplicaci&oacute;n.<br />  - Direcci&oacute;n de Correo Electr&oacute;nico: Recopilada para mejorar los servicios de la aplicaci&oacute;n.</li> <li><b>Ubicaci&oacute;n:</b><br />  - Ubicaci&oacute;n Aproximada: Utilizada para proporcionar caracter&iacute;sticas basadas en la ubicaci&oacute;n.</li> <li><b>Fotos y Videos:</b><br />  - Fotos: Se recopilan para habilitar ciertas funciones de la aplicaci&oacute;n.</li> </ul> <p>Para obtener m&aacute;s informaci&oacute;n, por favor consulta nuestra pol&iacute;tica de privacidad.</p> </body> </html></p>]]></string>

    <!-- Botones -->
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="data_collection_disclosure_title">Recopilación de Datos</string>

    <string name="accept_terms_and_conditions">Acepto los <b><font fgcolor='#0060AF'>términos y condiciones</font></b></string>
    <!--tratamiento de datos personales-->
    <string name="data_treatment_title">Acepto el <b><font fgcolor='#0060AF'>tratamiento de datos personales</font></b></string>

    <string name="https_yaku_com_privacy_policy">https://doc-hosting.flycricket.io/politica-de-privacidad-de-yaku-lab/2d06d4ce-1445-4014-b4de-8c5089403d9b/privacy</string>
    <string name="https_yaku_com_transparencia">https://doc-hosting.flycricket.io/yaku-lab-terminos-y-condiciones-de-uso/238e1aae-8605-4fa9-b25f-b2973bc6f7cb/terms</string>

</resources>