<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.paparazziteam.yakulap.presentation.dashboard.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_challenge"
            app:destination="@id/nav_challenge" />
        <action
            android:id="@+id/action_nav_home_to_nav_challenge_list"
            app:destination="@id/nav_challenge_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_challenge"
        android:name="com.paparazziteam.yakulap.presentation.laboratorio.fragments.ChallengeFragment"
        android:label="@string/menu_challenge"
        tools:layout="@layout/fragment_challenge" >
        <action
            android:id="@+id/action_nav_challenge_to_CameraFragment"
            app:destination="@id/nav_camera_whatsapp" />
        <action
            android:id="@+id/action_nav_challenge_to_nav_challenge_complete"
            app:destination="@id/nav_challenge_complete" />
    </fragment>

    <fragment
        android:id="@+id/nav_challenge_complete"
        android:name="com.paparazziteam.yakulap.presentation.laboratorio.fragments.ResultCaptureImageFragment"
        android:label="@string/menu_result_image_capture"
        tools:layout="@layout/fragment_result_capture_image" />

    <fragment
        android:id="@+id/nav_camera_whatsapp"
        android:name="io.ak1.pix.PixFragment"
        tools:layout="@layout/fragment_pix"></fragment>

    <fragment
        android:id="@+id/nav_challenge_list"
        android:name="com.paparazziteam.yakulap.presentation.laboratorio.views.ChallengeListFragment"
        android:label="@string/menu_challenge_list"></fragment>

</navigation>