<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:text="@string/data_collection_disclosure_title"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/uni_neue_bold"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        tools:text="@string/data_collection_disclosure_message"
        android:fontFamily="@font/uni_neue_regular"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="60dp"
            android:text="@string/cancel_button"
            app:strokeColor="@android:color/transparent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="60dp"
            android:text="@string/accept_button"
            app:strokeColor="@color/colorPrimaryYaku"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>